fix: Resolve --grid-(collumns | gap) issue

--- a/src/components/_pricing-table.scss
+++ b/src/components/_pricing-table.scss
@@ -2,7 +2,7 @@
 @use '../styles/abstracts' as *;
 
 .section.is-services .grid {
-  --gap: #{$size-line};
+  --grid-gap: #{$size-line};
 }
 
 .plan {
